fix: hide overflow to fix homepage animation bug

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,6 +11,7 @@
 body {
   background: var(--color-background);
   font-family: Arial, Helvetica, sans-serif;
+  overflow: hidden;
 }
 
 @keyframes gradient-x {
